--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,6 +1,6 @@
 %none {
   width: 1300px;
-  margin: 0 246px 0 246px;
+  margin: 0 246px;
 }
 
 .Footer {
@@ -16,14 +16,17 @@
 
     .container {
       display: flex;
+      align-items: center;
+      align-content: flex-start;
       justify-content: space-between;
-      padding-top: 70px;
+      padding-top: 20px;
       height: 136px;
       background-color: #1e1e1e;
       border-bottom: 1px solid #333333;
 
       .customerService {
         padding-left: 30px;
+        height: 100%;
         background-color: #1e1e1e;
 
         .leftBox1 {
@@ -33,7 +36,7 @@
         }
 
         .leftBox2 {
-          padding-top: 20px;
+          margin-top: 10px;
           background-color: #1e1e1e;
         }
 
@@ -44,10 +47,12 @@
           background-color: #1e1e1e;
         }
       }
+
       .rightBox {
         display: flex;
         align-items: flex-start;
         padding-right: 30px;
+        padding-bottom: 70px;
         background-color: #1e1e1e;
 
         .snsContainer {
