--- a/src/Pages/CategoryPage/ShirtList.scss
+++ b/src/Pages/CategoryPage/ShirtList.scss
@@ -19,10 +19,21 @@
         justify-content: flex-end;
         align-items: flex-start;
         position: absolute;
-        top: 70px;
+        top: 30px;
+        right: -85px;
         width: 150px;
         height: 100%;
         z-index: 3;
+
+        .ortherBox {
+          position: relative;
+
+          .dropDownElement2 {
+            position: relative;
+            top: 15px;
+            z-index: 2;
+          }
+        }
 
         .dropDown {
           display: flex;
@@ -31,8 +42,11 @@
 
           .downBox {
             display: flex;
-            position: relative;
+            position: absolute;
+            right: 20px;
+            top: -105px;
             align-items: center;
+            z-index: 3;
 
             .dropDownElement {
               display: flex;
