--- a/src/Pages/Main/ItemList.scss
+++ b/src/Pages/Main/ItemList.scss
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 100px 0;
 
   .noneBody {
     width: 1300px;
@@ -91,6 +92,7 @@
           justify-content: center;
           width: 100%;
           height: 42px;
+          margin: 50px 0;
 
           .whiteBtn {
             width: 250px;
